# pyeldqm

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  __init__.py  pyproject.toml  requirements.txt  run_app.py
.github/workflows/: ci.yml
app/: __init__.py  server.py
app/assets/: main_tabs.css
app/callbacks/: __init__.py  health_impact.py  par_analysis.py  route_optimization.py  routing.py  sensor_placement.py  shared_state.py  shelter_analysis.py  threat_zones.py
app/components/: header.py  slider_controls.py  styles.py  weather_inputs.py
app/components/tabs/: about.py  health_impact.py  par_analysis.py  route_optimization.py  sensor_placement.py  shelter_analysis.py  threat_zones.py
app/layout/: main_layout.py  sidebar.py
app/utils/: __init__.py  display_builders.py  map_renderers.py  plot_builders.py  script_generator.py
app/utils/script_generator/: __init__.py  health_impact.py  par_analysis.py  route_optimization.py  sensor_placement.py  shelter_analysis.py  threat_zones.py
configs/: README.md  ammonia_tank_release.yaml  base_config.yaml  lpg_bleve.yaml  realtime_monitoring.yaml
core/: __init__.py  chemical_database.py  chemical_dataframe.py  consequences.py  health_thresholds.py  thermal_radiation.py
core/dispersion_models/: gaussian_model.py  heavy_gas_model.py  multi_phase_dispersion.py
core/evacuation/: __init__.py
core/fire_models/: __init__.py  jet_fire.py
core/geography/: __init__.py
core/meteorology/: wind_profile.py
core/population/: ghsl_raster_download.py  worldpop_raster_download.py
core/source_models/gas_pipeline/: pipeline_leak.py
core/source_models/tank_release/: tank_gas.py  tank_liquid.py
core/utils/: __init__.py  chemical_phase.py  geo_constants.py  live_loop_manager.py  sensor_optimization.py  zone_extraction.py
core/visualization/: __init__.py  folium_maps.py
data/chemicals_database/: DATABASE_USAGE.md  VIEWING_GUIDE.md  __init__.py  chemicals_database.sqlite3  db.sqlite3
data/geographic_data/: facility_karachi.json  geographic_data.json
examples/: 01_chemical_database_access.py  01_chemical_database_reference.py  02_weather_data_integration.py  02_weather_integration_guide.py  03_geographic_data_access.py  03_geographic_data_workflow.py  04_folium_visualization_guide.py  04_folium_visualization_workflow.py  05_multi_source_dispersion.py  05_multi_source_gaussian_dispersion.py  06_real_time_ammonia_threat_zones.py  06_realtime_ammonia_threat_zones.py  07_live_PAR_analysis.py  07_live_population_at_risk_analysis.py  07a_live_PAR_analysis.py  08_live_PAR_emergency_routes.py  08_live_optimized_evacuation_routes.py  08a_optimized_evacuation_routes.py  09_sensor_placement_optimization.py  10_shelter_in_place_analysis.py  11_health_impact_threshold_zones.py  12_multi_source_live_PAR_analysis.py  12_multi_source_live_population_at_risk_analysis.py  __init__.py  ammonia_threat_zones_20260223_092524.py  ammonia_threat_zones_20260223_092641.py  ammonia_threat_zones_20260223_101632.py  ammonia_threat_zones_20260223_101641.py  ammonia_threat_zones_20260223_101654.py  ammonia_threat_zones_20260223_101713.py  ammonia_threat_zones_20260223_101720.py  ammonia_threat_zones_20260223_101736.py
examples/example_scripts/: 01_chemical_database_reference.py  04_folium_visualization_workflow.py  05_multi_source_gaussian_dispersion.py  06_real_time_ammonia_threat_zones.py
examples/notebooks/: 02_par_analysis_tutorial.ipynb  03_route_optimization_tutorial.ipynb  04_sensor_placement_tutorial.ipynb  05_health_impact_tutorial.ipynb  06_shelter_analysis_tutorial.ipynb
examples/scripts/: 01_chemical_database_reference.py  02_weather_data_integration.py  03_geographic_data_workflow.py  04_folium_visualization_workflow.py  05_multi_source_gaussian_dispersion.py  06_real_time_ammonia_threat_zones.py  07_live_population_at_risk_analysis.py  08_live_optimized_evacuation_routes.py  09_sensor_placement_optimization.py  10_shelter_in_place_analysis.py  11_health_impact_threshold_zones.py  12_multi_source_live_population_at_risk_analysis.py
pyeldqm/: __init__.py
pyeldqm/app/: config.py
pyeldqm/app/callbacks/: health_impact.py  par_analysis.py  route_optimization.py  routing.py  sensor_placement.py  shelter_analysis.py  slider_factory.py  threat_zones.py  ui_toggles.py  weather.py
pyeldqm/app/components/: __init__.py  header.py
pyeldqm/app/layout/: __init__.py  main_layout.py
pyeldqm/app/utils/: display_builders.py  population.py
pyeldqm/configs/: chlorine_pipeline_leak.yaml
pyeldqm/core/: chemical_database.py  chemical_dataframe.py  logging_config.py
pyeldqm/core/dispersion_models/: __init__.py  dispersion_utils.py  gaussian_model.py
pyeldqm/core/evacuation/: route_optimization.py
pyeldqm/core/fire_models/: flash_fire.py  pool_fire.py
pyeldqm/core/geography/: geographic_helper.py
pyeldqm/core/meteorology/: __init__.py  realtime_weather.py  solar_radiation.py  stability.py
pyeldqm/core/population/: __init__.py  zone_analysis.py
pyeldqm/core/protective_actions/: __init__.py  shelter_in_place.py
pyeldqm/core/source_models/: __init__.py  direct_source.py
pyeldqm/core/utils/: __init__.py  features.py  zone_extraction.py
pyeldqm/core/visualization/: folium_maps.py  info_panels.py  zone_layers.py
pyeldqm/data/: __init__.py
pyeldqm/data/thermodynamics_data/: phase_data.csv
pyeldqm/data/weather_samples/: sample.csv
pyeldqm/validation/validation_scripts/: validate_gaussian_dispersion.py  (+6 more)
tests/: conftest.py  test_consequence_models.py  test_dispersion_utils.py  test_fire_models.py  test_gaussian_model.py  test_geo_constants.py  test_health_thresholds.py  test_heavy_gas_model.py  test_meteorology.py  test_multi_phase_models.py  test_source_models.py
validation/: metrics.py
validation/validation_scripts/: README.md  VALIDATION_SCRIPTS_SUMMARY.md  __init__.py  validate_gaussian_dispersion.py  validate_heavy_gas_dispersion.py  validate_pipeline_leak.py  validate_puddle_evaporation.py  validate_tank_gas_release.py  validate_tank_liquid_leak.py  validate_tank_twophase_leak.py
(+12 files in other folders)
